--- a/package.json
+++ b/package.json
@@ -5,21 +5,32 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "axios": "^1.6.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/cypress": "20.0.6",
     "@nx/devkit": "20.0.6",
     "@nx/eslint": "20.0.6",
     "@nx/eslint-plugin": "20.0.6",
     "@nx/jest": "20.0.6",
     "@nx/js": "20.0.6",
+    "@nx/nest": "20.0.6",
+    "@nx/node": "20.0.6",
     "@nx/playwright": "20.0.6",
     "@nx/react": "20.0.6",
     "@nx/vite": "20.0.6",
     "@nx/web": "20.0.6",
+    "@nx/webpack": "20.0.6",
     "@nx/workspace": "20.0.6",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
@@ -44,6 +55,7 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
     "nx": "20.0.6",
     "postcss": "8.4.38",
@@ -55,6 +67,7 @@
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "webpack-cli": "^5.1.4"
   }
 }
